ingress/grafana-ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress-rule
  namespace: infrastructure
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/security-groups: 'sg-06888aa06896fe6b8'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-west-2:873648699410:certificate/221cc48e-481d-42db-9a00-1549ffa34029'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: grafana-service
          servicePort: 80
